feat(auth): trying to implement auth but still not done

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,15 @@
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+
+
+NEXT_PUBLIC_APP_NAME="GiziSnap"
+NODE_ENV=development
+
+# NextAuth Konfigurasi
+NEXT_AUTH_BACKEND_URL=RAHASIA
+NEXTAUTH_SECRET="RAHASIA"
+
+
+# Frontend URL
+NEXT_PUBLIC_APP_URL=http://localhost:3000
