--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.16.0",
+    "gsap": "^3.13.0",
     "jose": "^6.0.11",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
