refactor: remove push notification API and related components
- Deleted push notification handler and subscription API files.
- Updated layout metadata for better PWA support.
- Enhanced InstallPWAButton with logging for user interactions.
- Cleaned up HeaderDashboard by removing unused PushNotificationManager.
- Improved PushNotificationManager to handle subscription data more effectively.
- Integrated NotificationPermissionRequest component in LandingPage for user notification permissions.
- Added service worker implementation for push notifications.
- Created notification permission request component to manage user permissions.
- Implemented preload animation for better user experience during loading but not yet .

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,8 @@
     "**/*.tsx",
     "**/*.cjs",
     "**/*.js",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": ["node_modules"]
+    ".next/types/**/*.ts", 
+    "public/sw.js" 
+],
+  "exclude": ["node_modules", "public/sw.ts", "public/sw.js"]
 }
