--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@serwist/next": "^9.0.14",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.75.5",
     "axios": "^1.9.0",
@@ -51,6 +52,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "recharts": "^2.15.3",
+    "serwist": "^9.0.14",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "web-push": "^3.6.7",
