--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "@serwist/next": "^9.0.14",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.75.5",
+    "@uploadthing/react": "^7.3.1",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^12.16.0",
     "gsap": "^3.13.0",
     "jose": "^6.0.11",
@@ -48,13 +49,14 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "recharts": "^2.15.3",
     "serwist": "^9.0.14",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "uploadthing": "^7.7.2",
     "web-push": "^3.6.7",
     "zod": "^3.24.4"
   },
