--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.4",
@@ -35,6 +36,7 @@
     "@serwist/next": "^9.0.14",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.75.5",
+    "@tensorflow/tfjs": "^4.22.0",
     "@uploadthing/react": "^7.3.1",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
