fix: Update .env.example to include PWA environment variables

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ NEXT_PUBLIC_ML_API_URL=""
 GITHUB_SECRET=
 GITHUB_ID=
 
-
 # Frontend URL
 NEXT_PUBLIC_APP_URL=
+
+# PWA Env
+NEXT_PUBLIC_VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
+
